main.js problem solved

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     <div class="container d-flex direction-column align-center relative">
       <textarea class="text-area title" placeholder="Title"></textarea>
       <textarea class="text-area note" placeholder="Make a note..."></textarea>
-      <button
-        class="button add-btn d-flex align-center justify-center absolute"
-      >
+      <button class="button add-btn d-flex align-center justify-center absolute">
         <span class="material-icons-outlined"> add </span>
       </button>
     </div>
